fixed peculiar biblio entry

--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -10909,7 +10909,7 @@
   mrnumber: "3726880"
   pages: "xxiii726"
   year: 2018
-  note: "Basic concepts, modelling and analysis with quasi-analytical solutions and methods, New edition of  MR2032973"
+  note: "Basic concepts, modelling and analysis with quasi-analytical solutions and methods"
   publisher: "Elsevier, Amsterdam"
   isbn: "978-0-444-63581-5"
   title: "The classical Stefan problem"
