satff and Insprie page update

--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -1,3 +1,9 @@
+- name: Safdar Quddus, (Ph.D., Washington University)
+  position: Inspire Fellow
+  research-areas: Non-commutative geometry
+  user-id: safdarquddus
+  
+
 - name: Surjit Kumar, (Ph.D., IIT Kanpur)
   position: Inspire Fellow
   research-areas: Operator theory
