--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -30,13 +30,16 @@ jan2019:
       instructor: Siddhartha Gadgil
 
     - code: MA 311
-      name: Algebraic Geometry 2
+      name: Algebraic Geometry II
       instructor: Abhishek Banerjee
 
     - code: MA 319
       name: Algebraic Combinatorics
       instructor: Arvind Ayyer
 
+    - code: MA 326
+      name: Fourier Anaysis
+      instructor: E.K. Narayanan
 
     - code: MA 340
       name: Advanced Functional Analysis
@@ -51,8 +54,8 @@ jan2019:
       instructor: Pooja Singla
 
 
-    - code: MA 3xx
-      name: Mathematical Finance 2
+    - code: MA 366
+      name: Mathematical Finance II
       instructor: Mrinal K. Ghosh
 
 
@@ -101,12 +104,12 @@ aug2018:
       instructor: A. K. Nandakumaran
 
   electives:
-    - code: MA 26x
-      name: Mathematical Finance 1
+    - code: MA 266
+      name: Mathematical Finance I
       instructor: Mrinal K. Ghosh
 
     - code: MA 310
-      name: Algebraic Geometry 1
+      name: Algebraic Geometry I
       instructor: Abhishek Banerjee
 
     - code: MA 335
