--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -231,6 +231,19 @@
   volume: "52"
   issn: "0246-0203"
 
+- author: "Balodi, Mamta and Palcoux, Sebastien"
+  fjournal: "Journal of Combinatorial Theory. Series A"
+  url: "httpsdoi.org10.1016j.jcta.2018.02.004"
+  journal: "J. Combin. Theory Ser. A"
+  mrnumber: "3780407"
+  pages: "49-69"
+  year: 2018
+  title: "On Boolean intervals of finite groups"
+  doi: "10.1016j.jcta.2018.02.004"
+  mrclass: "20D30 (05E45 06A11 06C15 20C15)"
+  volume: "157"
+  issn: "0097-3165"
+
 - number: "1-2"
   author: "Pusti, Sanjoy and Sarkar, Rudra P."
   fjournal: "Manuscripta Mathematica"
@@ -245,6 +258,20 @@
   mrclass: "43A85 (22E30 43A80)"
   volume: "140"
   issn: "0025-2611"
+
+- number: "3"
+  author: "Bhosle, Usha N."
+  fjournal: "International Journal of Mathematics"
+  url: "httpsdoi.org10.1142S0129167X18500155"
+  journal: "Internat. J. Math."
+  mrnumber: "3786525"
+  pages: "1850015, 49"
+  year: 2018
+  title: "Hitchin pairs on reducible curves"
+  doi: "10.1142S0129167X18500155"
+  mrclass: "14H60 (14D20)"
+  volume: "29"
+  issn: "0129-167X"
 
 - number: "3-4"
   author: "Ramanathan, T. M. and Prasad, P. and Ravindran, R."
@@ -512,6 +539,20 @@
   mrclass: "37C75 (34D20 37D45 93D15)"
   volume: "11"
   issn: "1007-5704"
+
+- number: "1"
+  author: "Bera, Sayani and Verma, Kaushal"
+  fjournal: "Indian Academy of Sciences. Proceedings. Mathematical Sciences"
+  url: "httpsdoi.org10.1007s12044-018-0388-1"
+  journal: "Proc. Indian Acad. Sci. Math. Sci."
+  mrnumber: "3778389"
+  pages: "Art. 10, 48"
+  year: 2018
+  title: "Some aspects of shift-like automorphisms of $\\Bbb C^k$"
+  doi: "10.1007s12044-018-0388-1"
+  mrclass: "32H50 (32H02)"
+  volume: "128"
+  issn: "0253-4142"
 
 - author: "Chakrabarti, A. and Ahluwalia, D. S."
   series: "Adv. Fluid Mech."
@@ -1559,6 +1600,20 @@
   volume: "4"
   issn: "1615-715X"
 
+- number: "2"
+  author: "Das, Soumya and Kohnen, Winfried"
+  fjournal: "Acta Arithmetica"
+  url: "httpsdoi.org10.4064aa170419-4-11"
+  journal: "Acta Arith."
+  mrnumber: "3798786"
+  pages: "167-172"
+  year: 2018
+  title: "On sign changes of eigenvalues of Siegel cusp forms of genus 2 in prime powers"
+  doi: "10.4064aa170419-4-11"
+  mrclass: "11F46"
+  volume: "183"
+  issn: "0065-1036"
+
 - author: "Muthukumar, T. and Nandakumaran, A. K."
   fjournal: "Electronic Journal of Differential Equations"
   journal: "Electron. J. Differential Equations"
@@ -2159,6 +2214,19 @@
   mrclass: "42C10 (26A33 33C52 47G40)"
   volume: "22"
   issn: "1259-1734"
+
+- author: "Ayyer, Arvind and Bouttier, J&eacute;r&eacute;mie and Corteel, Sylvie and Linusson, Svante and Nunzi, Fran&ccedil;cois"
+  fjournal: "Advances in Applied Mathematics"
+  url: "httpsdoi.org10.1016j.aam.2018.03.001"
+  journal: "Adv. in Appl. Math."
+  mrnumber: "3790010"
+  pages: "100-126"
+  year: 2018
+  title: "Bumping sequences and multispecies juggling"
+  doi: "10.1016j.aam.2018.03.001"
+  mrclass: "60C05 (05A05 60J10 82C23)"
+  volume: "98"
+  issn: "0196-8858"
 
 - number: "4"
   author: "Basak, Biplab and Casali, Maria Rita"
@@ -4048,6 +4116,20 @@
   volume: "139"
   issn: "0002-9939"
 
+- number: "7"
+  author: "Gaddam, Sharat and Gudi, Thirupathi"
+  fjournal: "Computers \\ Mathematics with Applications. An International Journal"
+  url: "httpsdoi.org10.1016j.camwa.2017.12.010"
+  journal: "Comput. Math. Appl."
+  mrnumber: "3777102"
+  pages: "2311-2327"
+  year: 2018
+  title: "Inhomogeneous Dirichlet boundary condition in the \\it a posteriori error control of the obstacle problem"
+  doi: "10.1016j.camwa.2017.12.010"
+  mrclass: "65N30 (65K15 65N15)"
+  volume: "75"
+  issn: "0898-1221"
+
 - number: "3-4"
   author: "Richard, Thomas and Seshadri, Harish"
   fjournal: "Manuscripta Mathematica"
@@ -4829,6 +4911,20 @@
   issn: "0025-5874"
 
 - number: "1-2"
+  author: "Pingali, Vamsi Pritham"
+  fjournal: "Mathematische Zeitschrift"
+  url: "httpsdoi.org10.1007s00209-017-1903-2"
+  journal: "Math. Z."
+  mrnumber: "3774428"
+  pages: "629-641"
+  year: 2018
+  title: "Representability of Chern-Weil forms"
+  doi: "10.1007s00209-017-1903-2"
+  mrclass: "32L05 (14J60)"
+  volume: "288"
+  issn: "0025-5874"
+
+- number: "1-2"
   author: "Janardhanan, Jaikrishnan"
   fjournal: "Mathematische Zeitschrift"
   url: "httpdx.doi.org10.1007s00209-015-1421-z"
@@ -4937,6 +5033,20 @@
   mrclass: "35L65 (76N15)"
   volume: "217"
   issn: "0096-3003"
+
+- number: "6"
+  author: "Narayanan, E. K. and Singla, Pooja"
+  fjournal: "Communications in Algebra"
+  url: "httpsdoi.org10.108000927872.2017.1378894"
+  journal: "Comm. Algebra"
+  mrnumber: "3778393"
+  pages: "2319-2331"
+  year: 2018
+  title: "On monomial representations of finitely generated nilpotent groups"
+  doi: "10.108000927872.2017.1378894"
+  mrclass: "20C15 (20F18 22D30)"
+  volume: "46"
+  issn: "0092-7872"
 
 - number: "2"
   author: "Jayanthi, S. and Kumari, M."
@@ -6346,6 +6456,20 @@
   volume: "38"
   issn: "0022-2488"
 
+- number: "3"
+  author: "Paul, Kallol and Sain, Debmalya and Mal, Arpita and Mandal, Kalidas"
+  fjournal: "Advances in Operator Theory"
+  url: "httpsdoi.org10.15352aot.1712-1268"
+  journal: "Adv. Oper. Theory"
+  mrnumber: "3795110"
+  pages: "699-709"
+  year: 2018
+  title: "Orthogonality of bounded linear operators on complex Banach spaces"
+  doi: "10.15352aot.1712-1268"
+  mrclass: "46B20 (47L05)"
+  volume: "3"
+  issn: "2538-225X"
+
 - number: "12"
   author: "Bharali, Gautam"
   fjournal: "International Journal of Mathematics"
@@ -7566,6 +7690,20 @@
   issn: "2090-5572"
 
 - number: "2"
+  author: "Thangavelu, Sundaram and Naidu Dogga, Venku"
+  fjournal: "Advances in Pure and Applied Mathematics"
+  url: "httpsdoi.org10.1515apam-2017-0042"
+  journal: "Adv. Pure Appl. Math."
+  mrnumber: "3781317"
+  pages: "85-92"
+  year: 2018
+  title: "$L^p$-$L^2$ estimates for solutions of the wave equation associated to the Grushin operator"
+  doi: "10.1515apam-2017-0042"
+  mrclass: "42C10 (46E30 47D09)"
+  volume: "9"
+  issn: "1867-1152"
+
+- number: "2"
   author: "Brehm, Ulrich and Datta, Basudeb and Nilakantan, Nandini"
   fjournal: "Beitr&auml;ge zur Algebra und Geometrie. Contributions to Algebra and Geometry"
   journal: "Beitr&auml;ge Algebra Geom."
@@ -8115,6 +8253,20 @@
   booktitle: "Proceedings of the 25th International Conference on Probabilistic, Combinatorial and Asymptotic Methods for the Analysis of Algorithms"
   title: "Multivariate juggling probabilities"
   mrclass: "60J10 (05A17)"
+
+- number: "3"
+  author: "Aiyappan, S. and Nandakumaran, A. K. and Prakash, Ravi"
+  fjournal: "Calculus of Variations and Partial Differential Equations"
+  url: "httpsdoi.org10.1007s00526-018-1354-6"
+  journal: "Calc. Var. Partial Differential Equations"
+  mrnumber: "3798023"
+  pages: "Art. 86, 30"
+  year: 2018
+  title: "Generalization of unfolding operator for highly oscillating smooth boundary domains and homogenization"
+  doi: "10.1007s00526-018-1354-6"
+  mrclass: "35B27"
+  volume: "57"
+  issn: "0944-2669"
 
 - number: "2"
   author: "Arapostathis, Aristotle and Borkar, Vivek S. and Fern&aacute;ndez-Gaucherand, Emmanuel and Ghosh, Mrinal K. and Marcus, Steven I."
@@ -8879,6 +9031,20 @@
   booktitle: "Algorithms and theory of computation handbook"
   title: "Integer programming"
   mrclass: "90C10"
+
+- number: "2"
+  author: "Gaddam, Sharat and Gudi, Thirupathi"
+  fjournal: "Computational Methods in Applied Mathematics"
+  url: "httpsdoi.org10.1515cmam-2017-0018"
+  journal: "Comput. Methods Appl. Math."
+  mrnumber: "3776043"
+  pages: "223-236"
+  year: 2018
+  title: "Bubbles enriched quadratic finite element method for the 3D-elliptic obstacle problem"
+  doi: "10.1515cmam-2017-0018"
+  mrclass: "65N30 (65K15 65N12 65N15)"
+  volume: "18"
+  issn: "1609-4840"
 
 - number: "1"
   author: "Gudi, Thirupathi and Gupta, Hari Shanker and Nataraj, Neela"
