--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -158,6 +158,8 @@
   position: Assistant Professor
   research-areas: Probability Theory
   phd: Courant Institute
+  office: L14
+  phone-ext: xxxx
 
 - name: Harish Seshadri
   user-id: harish
