--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -160,6 +160,7 @@
   phd: Courant Institute
   office: L14
   phone-ext: xxxx
+  website: https://sites.google.com/site/sanchayansenss/
 
 - name: Harish Seshadri
   user-id: harish
