--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -92,7 +92,7 @@
   user-id: khare
   position: Assistant Professor
   phd: Chicago
-  research-areas: Positivity and analysis; representation theory of Lie algebras; combinatorics and discrete mathematics (with connections to the two research areas above)
+  research-areas: Positivity and analysis; representation theory of Lie algebras and algebras with triangular decompositions; combinatorics and discrete mathematics (with connections to the two research areas above)
   phone-ext: 3214
   office: R23
 
