--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -21,7 +21,7 @@ jan2019:
 
     - code: MA 241
       name: Ordinary Differential Equations
-      instructor: A. K. Nandakumaran
+      instructor: Thirupathi Gudi
       credits: "3:1"
 
   electives:
