--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -13,6 +13,9 @@
 - name : Abhash Kumar Jha (Ph.D., NISER)
   user-id : abhashjha
 
+- name : Kuldeep Kumar Kataria (Ph.D., IIT Bombay)
+  user-id : kuldeepk 
+
 - name	:	Dipendu Maity (Ph.D., IIT Patna)
   user-id	:	dipendumaity
 
