pdf page update

--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -31,5 +31,8 @@
 - name	:	Tanmay Sarkar (Ph.D., IIT Madras)
   user-id	:	tanmaysarkar
 
+- name	:	Sneh Bala Sinha (Ph.D., HRI, Allahabad)
+  user-id	:	snehasinha
+
 - name  :       Abhitosh Upadhyay (Ph.D., Guru Gobind Singh Indraprastha University Delhi)
   user-id       :       abhitoshu
