--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -1,3 +1,196 @@
+jan2019:
+  ug:
+  - code: UM 102
+    instructor: Apoorva Khare
+    name: "Anaysis and Linear Algebra - II"
+    ug-prereq-courses: UM 101
+  - code: UM 203
+    name: Introduction to Algebraic Structures
+    instructor: Vamsi Pingali
+    ug-prereq-courses: UM 102
+  - code: UM 204
+    name: Introduction to Basic Analysis
+    instructor: Gautam Bharali
+    ug-prereq-courses: UM 102
+  core1:
+  - name: Algebra II
+    credits: '3:1'
+    instructor: Soumya Das
+    code: MA 213
+    prereq-courses: MA 212
+    ug-prereq-courses: ''
+  - name: Measure & Integration
+    credits: '3:1'
+    instructor: E. K. Narayanan
+    code: MA 222
+    prereq-courses: MA 221
+    ug-prereq-courses: ''
+  - name: Complex Analysis
+    credits: '3:1'
+    instructor: S. Thangavelu
+    code: MA 224
+    prereq-courses: MA 221
+    ug-prereq-courses: ''
+  - name: Calculus on Manifolds
+    instructor: Subhojoy Gupta
+    code: MA 229
+    prereq-courses: MA 221
+    ug-prereq-courses: ''
+  - name: Ordinary Differential Equations
+    credits: '3:1'
+    instructor: Thirupathi Gudi
+    code: MA 241
+    prereq-courses: MA 221
+    ug-prereq-courses: ''
+  electives:
+  - name: Logic, Types & Spaces
+    instructor: Siddhartha Gadgil
+    code: MA 210
+    prereq-courses: ''
+    ug-prereq-courses: ''
+  - name: Algebraic Geometry II
+    instructor: Abhishek Banerjee
+    code: MA 311
+    prereq-courses: ''
+    ug-prereq-courses: ''
+  - name: Algebraic Combinatorics
+    instructor: Arvind Ayyer
+    code: MA 319
+    prereq-courses: ''
+    ug-prereq-courses: ''
+  - name: Fourier Anaysis
+    instructor: E.K. Narayanan
+    code: MA 326
+    prereq-courses: MA 223
+    ug-prereq-courses: ''
+  - name: Advanced Functional Analysis
+    instructor: Tirthankar Bhattacharyya
+    code: MA 340
+    prereq-courses: MA 223
+    ug-prereq-courses: ''
+  - name: Mathematical Physics
+    instructor: Kaushal Verma
+    code: MA 384
+    prereq-courses: ''
+    ug-prereq-courses: ''
+  - name: Classical Groups
+    instructor: Pooja Singla
+    code: MA 385
+    prereq-courses: MA 212 & MA 219
+    ug-prereq-courses: ''
+  - name: Mathematical Finance II
+    instructor: Mrinal K. Ghosh
+    code: MA 366
+    prereq-courses: ''
+    ug-prereq-courses: ''
+
+aug2018:
+  ug:
+  - code: UM 101
+    instructor: Arvind Ayyer
+    name: Anaysis and Linear Algebra - I
+    ug-prereq-courses: UM 101
+  - code: UM 201
+    instructor: Manjunath Krishnapur
+    name: Probability and Statistics
+  core1:
+  - name: Multivariable Calculus
+    credits: '3:1'
+    instructor: Kaushal Verma
+    timing: 'Mon, Wed, Fri: 3:00-4:00'
+    code: MA 200
+    prereq-courses: ''
+    ug-prereq-courses: UM 204
+  - name: Algebra I
+    instructor: Pooja Singla
+    timing: 'Mon, Wed, Fri: 12:00-1:00'
+    code: MA 212
+    prereq-courses: ''
+    ug-prereq-courses: UM 203
+  - name: Linear Algebra
+    credits: '3:1'
+    instructor: R. Venkatesh
+    timing: 'Tue, Thu: 9:30-11:00'
+    code: MA 219
+    prereq-courses: ''
+    ug-prereq-courses: UM 102
+  - name: 'Analysis I: Real Anaysis'
+    instructor: Gautam Bharali
+    timing: 'Mon, Wed, Fri: 11:00-12:00'
+    code: MA 221
+    prereq-courses: ''
+    ug-prereq-courses: UM 204
+  - name: Topology
+    credits: '3:1'
+    instructor: Harish Seshadri
+    timing: 'Tue, Thu: 11:00-12:30'
+    code: MA 231
+    prereq-courses: ''
+    ug-prereq-courses: UM 204
+  - name: Probability Models
+    instructor: Siddhartha Gadgil
+    timing: 'Mon, Wed, Fri: 9:00-10:00'
+    code: MA 261
+    webpage: http://math.iisc.ac.in/~gadgil/MA261/
+    prereq-courses: ''
+    ug-prereq-courses: ''
+  electives:
+  - name: Mathematical Finance I
+    instructor: Mrinal K. Ghosh
+    timing: 'Tue, Thu: 3:30-5:00'
+    code: MA 266
+    prereq-courses: ''
+    ug-prereq-courses: ''
+  - name: Algebraic Geometry I
+    instructor: Abhishek Banerjee
+    timing: 'Tue, Thu: 3:30-5:00'
+    code: MA 310
+    prereq-courses: ''
+    ug-prereq-courses: ''
+  - name: Introduction to Hyperbolic Manifolds
+    instructor: Subhojoy Gupta
+    timing: 'Tue, Thu: 2:00-3:30'
+    code: MA 335
+    prereq-courses: MA 231
+    ug-prereq-courses: ''
+  - name: Probability Theory
+    instructor: Srikanth K. Iyer
+    timing: 'Tue, Thu: 11:00-12:30'
+    code: MA 361
+    prereq-courses: MA 222
+    ug-prereq-courses: ''
+  - name: Hermitian Analysis
+    instructor: Gadadhar Misra
+    timing: 'Mon, Wed, Fri: 2:00-3:00'
+    code: MA 370
+    prereq-courses: ''
+    ug-prereq-courses: ''
+  - name: Techniques in discrete probability
+    instructor: Riddhipratim Basu
+    timing: 'Tue, Thu: 2:00-3:30'
+    code: MA 394
+    prereq-courses: ''
+    ug-prereq-courses: ''
+  core2:
+  - name: Functional Analysis
+    instructor: Tirthankar Bhattacharyya
+    timing: 'Mon, Wed, Fri: 10:00-11:00'
+    code: MA 223
+    prereq-courses: MA 222, MA 224 & MA 219
+    ug-prereq-courses: ''
+  - name: Introduction to Algebraic Topology
+    instructor: Basudeb Datta
+    timing: 'Mon, Wed, Fri: 11:00-12:00'
+    code: MA 232
+    prereq-courses: MA 231 & MA 212
+    ug-prereq-courses: ''
+  - name: Partial Differential Equations
+    instructor: A. K. Nandakumaran
+    timing: 'Mon, Wed, Fri: 2:00-3:00'
+    code: MA 242
+    prereq-courses: MA 241
+    ug-prereq-courses: ''
+
 jan2017:
   core1:
   - name: Algebra II
@@ -67,104 +260,7 @@ jan2017:
     code: MA 390
     prereq-courses: MA361
     ug-prereq-courses: ''
-aug2018:
-  core1:
-  - name: Multivariable Calculus
-    credits: '3:1'
-    instructor: Kaushal Verma
-    timing: 'Mon, Wed, Fri: 3:00-4:00'
-    code: MA 200
-    prereq-courses: ''
-    ug-prereq-courses: UM 204
-  - name: Algebra I
-    instructor: Pooja Singla
-    timing: 'Mon, Wed, Fri: 12:00-1:00'
-    code: MA 212
-    prereq-courses: ''
-    ug-prereq-courses: UM 203
-  - name: Linear Algebra
-    credits: '3:1'
-    instructor: R. Venkatesh
-    timing: 'Tue, Thu: 9:30-11:00'
-    code: MA 219
-    prereq-courses: ''
-    ug-prereq-courses: UM 102
-  - name: 'Analysis I: Real Anaysis'
-    instructor: Gautam Bharali
-    timing: 'Mon, Wed, Fri: 11:00-12:00'
-    code: MA 221
-    prereq-courses: ''
-    ug-prereq-courses: UM 204
-  - name: Topology
-    credits: '3:1'
-    instructor: Harish Seshadri
-    timing: 'Tue, Thu: 11:00-12:30'
-    code: MA 231
-    prereq-courses: ''
-    ug-prereq-courses: UM 204
-  - name: Probability Models
-    instructor: Siddhartha Gadgil
-    timing: 'Mon, Wed, Fri: 9:00-10:00'
-    code: MA 261
-    webpage: http://math.iisc.ac.in/~gadgil/MA261/
-    prereq-courses: ''
-    ug-prereq-courses: ''
-  electives:
-  - name: Mathematical Finance I
-    instructor: Mrinal K. Ghosh
-    timing: 'Tue, Thu: 3:30-5:00'
-    code: MA 266
-    prereq-courses: ''
-    ug-prereq-courses: ''
-  - name: Algebraic Geometry I
-    instructor: Abhishek Banerjee
-    timing: 'Tue, Thu: 3:30-5:00'
-    code: MA 310
-    prereq-courses: ''
-    ug-prereq-courses: ''
-  - name: Introduction to Hyperbolic Manifolds
-    instructor: Subhojoy Gupta
-    timing: 'Tue, Thu: 2:00-3:30'
-    code: MA 335
-    prereq-courses: MA 231
-    ug-prereq-courses: ''
-  - name: Probability Theory
-    instructor: Srikanth K. Iyer
-    timing: 'Tue, Thu: 11:00-12:30'
-    code: MA 361
-    prereq-courses: MA 222
-    ug-prereq-courses: ''
-  - name: Hermetian Analysis
-    instructor: Gadadhar Misra
-    timing: 'Mon, Wed, Fri: 2:00-3:00'
-    code: MA 370
-    prereq-courses: ''
-    ug-prereq-courses: ''
-  - name: Techniques in discrete probability
-    instructor: Riddhipratim Basu
-    timing: 'Tue, Thu: 2:00-3:30'
-    code: MA 394
-    prereq-courses: ''
-    ug-prereq-courses: ''
-  core2:
-  - name: Functional Analysis
-    instructor: Tirthankar Bhattacharyya
-    timing: 'Mon, Wed, Fri: 10:00-11:00'
-    code: MA 223
-    prereq-courses: MA 222, MA 224 & MA 219
-    ug-prereq-courses: ''
-  - name: Introduction to Algebraic Topology
-    instructor: Basudeb Datta
-    timing: 'Mon, Wed, Fri: 11:00-12:00'
-    code: MA 232
-    prereq-courses: MA 231 & MA 212
-    ug-prereq-courses: ''
-  - name: Partial Differential Equations
-    instructor: A. K. Nandakumaran
-    timing: 'Mon, Wed, Fri: 2:00-3:00'
-    code: MA 242
-    prereq-courses: MA 241
-    ug-prereq-courses: ''
+
 jan2018:
   core1:
   - name: Algebra II
@@ -331,78 +427,7 @@ aug2016:
     code: MA 242
     prereq-courses: MA 241
     ug-prereq-courses: ''
-jan2019:
-  core1:
-  - name: Algebra II
-    credits: '3:1'
-    instructor: Soumya Das
-    code: MA 213
-    prereq-courses: MA 212
-    ug-prereq-courses: ''
-  - name: Measure & Integration
-    credits: '3:1'
-    instructor: E. K. Narayanan
-    code: MA 222
-    prereq-courses: MA 221
-    ug-prereq-courses: ''
-  - name: Complex Analysis
-    credits: '3:1'
-    instructor: S. Thangavelu
-    code: MA 224
-    prereq-courses: MA 221
-    ug-prereq-courses: ''
-  - name: Calculus on Manifolds
-    instructor: Subhojoy Gupta
-    code: MA 229
-    prereq-courses: MA 221
-    ug-prereq-courses: ''
-  - name: Ordinary Differential Equations
-    credits: '3:1'
-    instructor: Thirupathi Gudi
-    code: MA 241
-    prereq-courses: MA 221
-    ug-prereq-courses: ''
-  electives:
-  - name: Logic, Types & Spaces
-    instructor: Siddhartha Gadgil
-    code: MA 210
-    prereq-courses: ''
-    ug-prereq-courses: ''
-  - name: Algebraic Geometry II
-    instructor: Abhishek Banerjee
-    code: MA 311
-    prereq-courses: ''
-    ug-prereq-courses: ''
-  - name: Algebraic Combinatorics
-    instructor: Arvind Ayyer
-    code: MA 319
-    prereq-courses: ''
-    ug-prereq-courses: ''
-  - name: Fourier Anaysis
-    instructor: E.K. Narayanan
-    code: MA 326
-    prereq-courses: MA 223
-    ug-prereq-courses: ''
-  - name: Advanced Functional Analysis
-    instructor: Tirthankar Bhattacharyya
-    code: MA 340
-    prereq-courses: MA 223
-    ug-prereq-courses: ''
-  - name: Mathematical Physics
-    instructor: Kaushal Verma
-    code: MA 384
-    prereq-courses: ''
-    ug-prereq-courses: ''
-  - name: Classical Groups
-    instructor: Pooja Singla
-    code: MA 385
-    prereq-courses: MA 212 & MA 219
-    ug-prereq-courses: ''
-  - name: Mathematical Finance II
-    instructor: Mrinal K. Ghosh
-    code: MA 366
-    prereq-courses: ''
-    ug-prereq-courses: ''
+
 aug2017:
   core1:
   - name: Multivariable Calculus
