--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -135,6 +135,10 @@ aug2018:
     prereq-courses: ''
     ug-prereq-courses: ''
   electives:
+  - name: Representation Theory
+    instructor: R. Venkatesh and Apoorva Khare
+    code: MA 220
+    prereq-courses: MA 212 and MA 219  
   - name: Mathematical Finance I
     instructor: Mrinal K. Ghosh
     timing: 'Tue, Thu: 3:30-5:00'
