--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -362,3 +362,50 @@
   user-id: kesavk
   year-of-joining: 2017
   programme: PhD
+
+- name: Sivaram P
+  user-id: sivaramp
+  year-of-joining: 2018
+  programme: PhD
+
+- name: Renjith. T
+  user-id: renjitht
+  year-of-joining: 2018
+  programme: PhD
+
+- name: Annapurna Banik
+  user-id: annapurnab
+  year-of-joining: 2018
+  programme: PhD
+
+- name: Nishu Kumari
+  user-id: nishukumari
+  year-of-joining: 2018
+  programme: PhD
+
+- name: Sompurkar Rajas Sandeep
+  user-id: rajass
+  year-of-joining: 2018
+  programme: PhD
+
+
+
+- name: Dipnit Biswas
+  user-id: dipnitbiswas
+  year-of-joining: 2018
+  programme: Integrated PhD
+
+- name: B.S. Jnaneshwar
+  user-id: jnaneshwarb
+  year-of-joining: 2018
+  programme: Integrated PhD
+
+- name: Aashirwad Ballal
+  user-id: aashirwadb
+  year-of-joining: 2018
+  programme: Integrated PhD
+
+- name: Agniva Chatterjee
+  user-id: agnivac
+  year-of-joining: 2018
+  programme: Integrated PhD
