--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -405,7 +405,13 @@
   year-of-joining: 2018
   programme: Integrated PhD
 
+- name: Priyanka Chudasama
+  user-id: Priyankac
+  year-of-joining: 2018
+  programme: Integrated PhD
+
 - name: Agniva Chatterjee
   user-id: agnivac
   year-of-joining: 2018
   programme: Integrated PhD
+
