course list update

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -164,7 +164,7 @@ aug2018:
     prereq-courses: MA 222
     ug-prereq-courses: ''
   - name: Hermitian Analysis
-    instructor: Gadadhar Misra
+    instructor: Gadadhar Misra / Surjit Kumar
     timing: 'Mon, Wed, Fri: 2:00-3:00'
     code: MA 370
     prereq-courses: ''
