Updated Ved's information.

--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -43,7 +43,7 @@
 - name: Ved Datar
   user-id: vvdatar
   position: Assistant Professor
-  research-areas: Differential geometry
+  research-areas: Geometric analysis and Complex geometry.
   phd: Rutgers
   phone-ext: xxxx
   office: L14
