update in students file

--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -212,6 +212,7 @@
   user-id	:	nidhirathi
   year-of-joining: 2014
   programme: Integrated PhD
+  webpage: https://sites.google.com/view/nidhirathi/about
 
 
 - name	:	Ramesh Chandra Sau
