--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -60,6 +60,7 @@ jan2019:
     ug-prereq-courses: ''
     timing: 'Tue, Thu: 8:30-10:00'
     venue: "LH-5"
+    webpage: http://math.iisc.ac.in/~gadgil/LTS2019/
   - name: Algebraic Geometry II
     instructor: Abhishek Banerjee
     code: MA 311
