somu's course timings

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -19,7 +19,7 @@ jan2019:
     code: MA 213
     prereq-courses: MA 212
     ug-prereq-courses: ''
-    timing: 'Tue, Thu: 11:30-1:00'
+    timing: 'Mon, Wed, Fri: 9:00-10:00'
     venue: "LH-4"
   - name: Measure & Integration
     credits: '3:1'
