--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -61,6 +61,11 @@ jan2019:
     timing: 'Tue, Thu: 8:30-10:00'
     venue: "LH-5"
     webpage: http://math.iisc.ac.in/~gadgil/LTS2019/
+  - name: Introduction to Dynamical Systems Theory
+    instructor: Janaki Balakrishnan
+    code: MA 278
+    prereq-courses: ''
+    ug-prereq-courses: ''
   - name: Algebraic Geometry II
     instructor: Abhishek Banerjee
     code: MA 311
